--- a/prototool.yaml
+++ b/prototool.yaml
@@ -10,7 +10,7 @@ protoc:
   # The Protobuf version to use from https://github.com/protocolbuffers/protobuf/releases.
   # By default use 3.8.0.
   # You probably want to set this to make your builds completely reproducible.
-  version: 3.8.0
+  version: 3.7.0
 
   # Additional paths to include with -I to protoc.
   # By default, the directory of the config file is included,
@@ -188,3 +188,8 @@ generate:
 #      file_suffix: bin
 #      include_imports: true
 #      include_source_info: true
+    - name: cpp
+      output: cpp
+    - name: grpc-cpp
+      path: grpc_cpp_plugin
+      output: cpp
