--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
     "@grpc/proto-loader": "^0.5.1",
     "@rightech/utils": "^0.1.3",
     "grpc": "^1.23.3"
-  }
+  },
+  "typings": "dts/index.d.ts"
 }
