--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "@grpc/proto-loader": "^0.5.1",
     "@rightech/utils": "^0.1.3",
-    "grpc": "^1.23.3"
+    "grpc": "^1.23.3",
+    "nanoid": "^3.1.9"
   },
   "typings": "dts/index.d.ts"
 }
