--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths-ignore:
-      - .github/**
+      - .github/workflows/build_compiler.yaml
       - go/**
       - dts/**
       - cpp/**
