--- a/.github/workflows/build_compiler.yaml
+++ b/.github/workflows/build_compiler.yaml
@@ -46,14 +46,10 @@ jobs:
     needs: build_compiler
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2
-      - name: login to registry
-        run:  echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
-      - name: pull compiler image
-        run: docker pull docker.pkg.github.com/rightech/ric-proto/compiler:latest
-      - name: compile
-        run: docker run --rm -v $(pwd):/ric-proto docker.pkg.github.com/rightech/ric-proto/compiler:latest
-      - name: commit changes
-        uses: EndBug/add-and-commit@v4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: trigger event
+        run: |
+          curl --request POST \
+            --url https://api.github.com/repos/${{ github.repository }}/dispatches \
+            --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+            --header 'content-type: application/json' \
+            --data '{"event_type":"image-update"}'
