--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -15,6 +15,8 @@ on:
       - package.json
       - package-lock.json
       - README.md
+  repository_dispatch:
+    types: ["image-update"]
 
 jobs:
   compile:
