--- a/.github/workflows/build_compiler.yaml
+++ b/.github/workflows/build_compiler.yaml
@@ -48,7 +48,7 @@ jobs:
     steps:
       - name: trigger event
         run: |
-          curl --request POST \
+          curl -v --request POST \
             --url https://api.github.com/repos/${{ github.repository }}/dispatches \
             --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
             --header 'content-type: application/json' \
