--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -34,6 +34,8 @@ jobs:
             --env USER_ID=$(id -u) \
             --env USER_GROUP=$(id -g) \
             docker.pkg.github.com/rightech/ric-proto/compiler:latest
+      - name: update event json
+        run: jq '. + .client_payload' $GITHUB_EVENT_PATH > $GITHUB_EVENT_PATH
       - name: show json
         run: cat $GITHUB_EVENT_PATH
       - name: commit changes
