Try fix dispatch event

--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -36,18 +36,17 @@ jobs:
             docker.pkg.github.com/rightech/ric-proto/compiler:latest
       - name: set credentials
         run: |
+          cat $GITHUB_EVENT_PATH
           export AUTHOR_NAME=$(jq '. | if (.head_commit == null) then \
             .client_payload.author_name else .head_commit.author.name end' \
             $GITHUB_EVENT_PATH)
           export AUTHOR_EMAIL=$(jq '. | if (.head_commit == null) then \
             .client_payload.author_email else .head_commit.author.email end' \
             $GITHUB_EVENT_PATH)
-          echo "::set-env name=AUTHOR_NAME::$AUTHOR_NAME"
-          echo "::set-env name=AUTHOR_EMAIL::$AUTHOR_EMAIL"
-      - name: echo
-        run: |
           echo $AUTHOR_NAME
           echo $AUTHOR_EMAIL
+          echo "::set-env name=AUTHOR_NAME::$AUTHOR_NAME"
+          echo "::set-env name=AUTHOR_EMAIL::$AUTHOR_EMAIL"
       - name: commit changes
         uses: EndBug/add-and-commit@v4
         with:
