--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -25,7 +25,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: login to registry
-        run:  echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+        run:  |
+          echo ${{ secrets.GITHUB_TOKEN }} | \
+            docker login docker.pkg.github.com -u ${{ github.actor }} \
+            --password-stdin
       - name: pull compiler image
         run: docker pull docker.pkg.github.com/rightech/ric-proto/compiler:latest
       - name: compile
@@ -36,14 +39,23 @@ jobs:
             docker.pkg.github.com/rightech/ric-proto/compiler:latest
       - name: set credentials
         run: |
-          export AUTHOR_NAME=$(jq '. | if (.head_commit == null) then .client_payload.author_name else .head_commit.author.name end' $GITHUB_EVENT_PATH | xargs)
-          export AUTHOR_EMAIL=$(jq '. | if (.head_commit == null) then .client_payload.author_email else .head_commit.author.email end' $GITHUB_EVENT_PATH | xargs)
-          echo "::set-env name=AUTHOR_NAME::$AUTHOR_NAME"
-          echo "::set-env name=AUTHOR_EMAIL::$AUTHOR_EMAIL"
+          echo "AUTHOR_NAME="$(jq '. |
+          if (.head_commit == null) then
+              .client_payload.author_name
+          else
+              .head_commit.author.name end' \
+          $GITHUB_EVENT_PATH | xargs) >> $GITHUB_ENV
+
+          echo "AUTHOR_EMAIL="$(jq '. |
+          if (.head_commit == null) then
+              .client_payload.author_email
+          else
+              .head_commit.author.email end' \
+          $GITHUB_EVENT_PATH | xargs) >> $GITHUB_ENV
       - name: commit changes
         uses: EndBug/add-and-commit@v4
         with:
-          author_name: ${{ env.AUTHOR_NAME }}
-          author_email: ${{ env.AUTHOR_EMAIL }}
+          author_name: $AUTHOR_NAME
+          author_email: $AUTHOR_EMAIL
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
