--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "homepage": "https://github.com/Rightech/ric-proto#readme",
   "dependencies": {
+    "@grpc/grpc-js": "^1.2.1",
     "@grpc/proto-loader": "^0.5.1",
     "@rightech/utils": "^0.1.3",
-    "grpc": "^1.23.3",
     "nanoid": "^3.1.9"
   },
   "typings": "dts/index.d.ts"
